--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_scatter.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_scatter.html
@@ -66,26 +66,20 @@
             <div class="col-sm-7">
                 <div>
                     <div class="radio radio-inline">
-                        <input type="radio" name="radio_scale" id="radio_scale_default" value="default"  checked onchange="scale_setting_listener()">
-                        <label for="radio_scale_default" title="Use default">
-                            &nbsp;Use default
-                        </label>
-                    </div>
-                    <div class="radio radio-inline">
                         <input type="radio" name="radio_scale" id="radio_scale_series" value="series" onchange="scale_setting_listener()">
-                        <label for="radio_scale_series" title="Use series">
-                            &nbsp;Use series
+                        <label for="radio_scale_series" title="Use series" style="padding-left: 20px;">
+                            &nbsp;Series
                         </label>
                     </div>
                     <div class="radio radio-inline">
                         <input type="radio" name="radio_scale" id="radio_scale_manual" value="manual" onchange="scale_setting_listener()">
-                        <label for="radio_scale_manual" title="Manual">
+                        <label for="radio_scale_manual" title="Manual" style="padding-left: 20px;">
                             &nbsp;Manual
                         </label>
                     </div>
                     <div class="radio radio-inline">
                         <input type="radio" name="radio_scale" id="radio_scale_disable" value="disable" onchange="scale_setting_listener()">
-                        <label for="radio_scale_disable" title="Disable">
+                        <label for="radio_scale_disable" title="Disable" style="padding-left: 20px;">
                             &nbsp;Disable
                         </label>
                     </div>
