--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_content_remove_chart.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_content_remove_chart.html
@@ -107,7 +107,7 @@
 
     //validate
     ValidationPOJO.validate("Entity ID", genericModalViewModel.businessPOJO().id, errorMessages, ['KEY_NOT_NULL']);
-    ValidationPOJO.validate("Report Name", genericModalViewModel.businessPOJO().report_name(), errorMessages, ['KEY_NOT_NULL']);
+//    ValidationPOJO.validate("Report Name", genericModalViewModel.businessPOJO().report_name, errorMessages, ['KEY_NOT_NULL']);
 
     return errorMessages;
   }
