--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_radar.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_radar.html
@@ -7,21 +7,8 @@
 <ul>
 <li>Indicator:[{"name":"AQI","max":300},{"name":"PM2.5","max":250},{"name":"PM10","max":300},{"name":"CO","max":5},{"name":"NO2","max":200},{"name":"SO2","max":100}]</li>
 <li>Series:
-[
-[91,45,125,0.82,34,23,1],
-[65,27,78,0.86,45,29,2],
-[83,60,84,1.09,73,27,3],
-[109,81,121,1.28,68,51,4],
-[106,77,114,1.07,55,51,5],
-[109,81,121,1.28,68,51,6],
-[106,77,114,1.07,55,51,7],
-[89,65,78,0.86,51,26,8],
-[53,33,47,0.64,50,17,9],
-[80,55,80,1.01,75,24,10],
-[117,81,124,1.03,45,24,11],
-[99,71,142,1.1,62,42,12],
-[95,69,130,1.28,74,50,13]
-]</li>
+[{"name": "col1","value":[55, 9, 56, 0.46, 18, 6]}, {"name": "col2","value":[25, 11, 21, 0.65, 34, 9]},{"name": "col3","value":[56, 7, 63, 0.3, 14, 5]}]
+</li>
 </ul>
 </span>
 
@@ -31,10 +18,11 @@
     chart = ChartPOJO.generate_default_chart('tutorial_chart');
     chartCache['tutorial_chart'] = chart;
     
-    var data = [[55, 9, 56, 0.46, 18, 6, 1],[25, 11, 21, 0.65, 34, 9, 2],[56, 7, 63, 0.3, 14, 5, 3],[33, 7, 29, 0.33, 16, 6, 4],[42, 24, 44, 0.76, 40, 16, 5],[82, 58, 90, 1.77, 68, 33, 6],[74, 49, 77, 1.46, 48, 27, 7],[78, 55, 80, 1.29, 59, 29, 8],[267, 216, 280, 4.8, 108, 64, 9],[185, 127, 216, 2.52, 61, 27, 10],[39, 19, 38, 0.57, 31, 15, 11],
-         [41, 11, 40, 0.43, 21, 7, 12],[64, 38, 74, 1.04, 46, 22, 13],[108, 79, 120, 1.7, 75, 41, 14],[108, 63, 116, 1.48, 44, 26, 15],[33, 6, 29, 0.34, 13, 5, 16],[94, 66, 110, 1.54, 62, 31, 17],[186, 142, 192, 3.88, 93, 79, 18],[57, 31, 54, 0.96, 32, 14, 19],[22, 8, 17, 0.48, 23, 10, 20],[39, 15, 36, 0.61, 29, 13, 21],
-         [94, 69, 114, 2.08, 73, 39, 22],[99, 73, 110, 2.43, 76, 48, 23],[31, 12, 30, 0.5, 32, 16, 24],[42, 27, 43, 1, 53, 22, 25],[154, 117, 157, 3.05, 92, 58, 26],[234, 185, 230, 4.09, 123, 69, 27],[160, 120, 186, 2.77, 91, 50, 28],[134, 96, 165, 2.76, 83, 41, 29],[52, 24, 60, 1.03, 50, 21, 30],[46, 5, 49, 0.28, 10, 6, 31]];
-    var indicator = [{name: 'AQI',max: 300}, {name: 'PM2.5',max: 250}, {name: 'PM10',max: 300}, {name: 'CO',max: 5}, {name: 'NO2',max: 200}, {name: 'SO2',max: 100}];
+//    var data = [[55, 9, 56, 0.46, 18, 6, 1],[25, 11, 21, 0.65, 34, 9, 2],[56, 7, 63, 0.3, 14, 5, 3],[33, 7, 29, 0.33, 16, 6, 4],[42, 24, 44, 0.76, 40, 16, 5],[82, 58, 90, 1.77, 68, 33, 6],[74, 49, 77, 1.46, 48, 27, 7],[78, 55, 80, 1.29, 59, 29, 8],[267, 216, 280, 4.8, 108, 64, 9],[185, 127, 216, 2.52, 61, 27, 10],[39, 19, 38, 0.57, 31, 15, 11],
+//         [41, 11, 40, 0.43, 21, 7, 12],[64, 38, 74, 1.04, 46, 22, 13],[108, 79, 120, 1.7, 75, 41, 14],[108, 63, 116, 1.48, 44, 26, 15],[33, 6, 29, 0.34, 13, 5, 16],[94, 66, 110, 1.54, 62, 31, 17],[186, 142, 192, 3.88, 93, 79, 18],[57, 31, 54, 0.96, 32, 14, 19],[22, 8, 17, 0.48, 23, 10, 20],[39, 15, 36, 0.61, 29, 13, 21],
+//         [94, 69, 114, 2.08, 73, 39, 22],[99, 73, 110, 2.43, 76, 48, 23],[31, 12, 30, 0.5, 32, 16, 24],[42, 27, 43, 1, 53, 22, 25],[154, 117, 157, 3.05, 92, 58, 26],[234, 185, 230, 4.09, 123, 69, 27],[160, 120, 186, 2.77, 91, 50, 28],[134, 96, 165, 2.76, 83, 41, 29],[52, 24, 60, 1.03, 50, 21, 30],[46, 5, 49, 0.28, 10, 6, 31]];
+    var data = [{name: 'col1',value:[55, 9, 56, 0.46, 18, 6]}, {name: 'col2',value:[25, 11, 21, 0.65, 34, 9]},{name: 'col3',value:[56, 7, 63, 0.3, 14, 5]}];
+    var indicator = [{name: 'AQI',max: 100}, {name: 'PM2.5',max: 20}, {name: 'PM10',max: 100}, {name: 'CO',max: 1}, {name: 'NO2',max: 50}, {name: 'SO2',max: 10}];
     chart = Radar_ChartPOJO.initialize_chart(chart, data, indicator);
   }
 
