--- a/generic_chart_client/src/main/webapp/module_chart_editor.html
+++ b/generic_chart_client/src/main/webapp/module_chart_editor.html
@@ -48,6 +48,9 @@
                                     <button title="Clean" type="button" onclick="ModalUtil.popup_modal('New Chart', '/assets/self-owned/html/chart/modal/modal_content_new_chart.html', null, null, null);" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-edit"></i></button>
                                     <button id="button_save" title="Save" type="button" data-bind="click:(function(){ModalUtil.popup_modal_with_businessPOJO('Save Chart', '/assets/self-owned/html/chart/modal/modal_content_save_chart.html',$data);})" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
                                     <span class="pull-right" style="margin-right:0px">
+                                        <!--<button type="button" class="btn btn-warning" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!hasNewContent">Modified</button>-->
+                                        <!--                                        <button type="button" class="btn btn-danger" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!name()">Unsaved</button>
+                                                                                <button type="button" class="btn btn-success" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:name()">Saved as: <span data-bind="text:name"></span></button>-->
                                         <button id="dispaly_config_button" onclick="show_configuration_panel();" title="Refresh" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-bottom: 0px;display:none"><i class="fa fa-wrench"></i></button>
                                         <button id="undispaly_config_button" onclick="hide_configuration_panel();" title="Hide" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
                                     </span>
@@ -226,16 +229,22 @@
                             <div class="card-body" id="detail_config_content_div">
                                 <div class="panel-body">
                                     <div class="form-group">
-                                        <label class="col-sm-3 control-label">Title</label>
+                                        <label class="col-sm-3 control-label" style="padding-top: 8px;padding-right: 0px;">Color Config</label>
                                         <div class="col-sm-7">
-                                            <div class="input-group">
-                                                <span class="input-group-addon" id="basic-addon1">
-                                                    <i class="fa fa-bars" aria-hidden="true"></i>&nbsp;</span>
-                                                <input id="title_value_input" type="text" class="form-control" placeholder="default:matrix chart" aria-describedby="basic-addon1">
-                                            </div>
+                                            <input id="title_color_input" type="text" class="form-control"  aria-describedby="basic-addon1" placeholder="#1ABC9C, #5DADE2, ……">
                                         </div>
                                         <div class="col-sm-2">
-                                            <button onclick="reset_title()" title="Manual add series" type="button" class="btn btn-success btn-xs" style="padding: 6px 12px;margin-top: 3px;"><i class="fa fa-check"></i></button>
+                                            <button onclick="run_color_config()" title="color config" type="button" class="btn btn-success btn-xs" style="padding: 6px 12px;margin-top: 3px;"><i class="fa fa-check"></i></button>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label" style="padding-top: 8px;">Title Config</label>
+                                        <div class="col-sm-3">
+                                            <button onclick="ModalUtil.popup_modal('Title Configuration', '/assets/self-owned/html/chart/modal/modal_title_config.html')" title="title config" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-top: 3px;"><i class="fa fa-cogs"></i></button>
+                                        </div>
+                                        <label class="col-sm-3 control-label" style="padding-top: 8px;    padding-left: 0px;padding-right: 0px;">Legend Config</label>
+                                        <div class="col-sm-3">
+                                            <button onclick="ModalUtil.popup_modal('Legend Configuration', '/assets/self-owned/html/chart/modal/modal_legend_config.html')" title="legend config" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-top: 3px;"><i class="fa fa-cogs"></i></button>
                                         </div>
                                     </div>
                                 </div>
@@ -330,81 +339,7 @@
                                                         $('#navbar_title_li').html('Matrix Chart Editor');
                                                         $('#navbar_search_li').css('display', 'none');
                                                     }, 200);
-
-                                                    //                                                        document.getElementById('txtFileUpload').addEventListener('change', upload, false);
                                                 });
-
-
-
-
-                                                //                                                var dataViewModel = {
-                                                //                                                    data: ko.observableArray()
-                                                //                                                };
-
-
-
-                                                //                                                // Method that checks that the browser supports the HTML5 File API
-                                                //                                                function browserSupportFileUpload() {
-                                                //                                                    var isCompatible = false;
-                                                //                                                    if (window.File && window.FileReader && window.FileList && window.Blob) {
-                                                //                                                        isCompatible = true;
-                                                //                                                    }
-                                                //                                                    return isCompatible;
-                                                //                                                }
-                                                //
-                                                //                                                // Method that reads and processes the selected file
-                                                //                                                function upload(evt) {
-                                                //                                                    if (!browserSupportFileUpload()) {
-                                                //                                                        alert('The File APIs are not fully supported in this browser!');
-                                                //                                                    } else {
-                                                //                                                        var data = null;
-                                                //                                                        var file = evt.target.files[0];
-                                                //                                                        var reader = new FileReader();
-                                                //                                                        reader.readAsText(file);
-                                                //                                                        reader.onload = function (event) {
-                                                //                                                            var csvData = event.target.result;
-                                                //
-                                                //                                                            data = $.csv.toArrays(csvData);
-                                                //                                                            if (data && data.length > 0) {
-                                                //                                                                alert('Imported -' + data.length + '- rows successfully!');
-                                                //                                                                dataViewModel.data(data)
-                                                //                                                            } else {
-                                                //                                                                alert('No data to import!');
-                                                //                                                            }
-                                                //                                                        };
-                                                //                                                        reader.onerror = function () {
-                                                //                                                            alert('Unable to read ' + file.fileName);
-                                                //                                                        };
-                                                //                                                    }
-                                                //                                                }
-                                                //
-                                                //                                                function use_data() {
-                                                //                                                    var a = [];
-                                                //                                                    for (var i = 0; i < dataViewModel.data().length; i++) {
-                                                //                                                        a[i] = [];
-                                                //                                                        for (j = 0; j < dataViewModel.data()[i].length; j++) {
-                                                //                                                            a[i][j] = dataViewModel.data()[i][j];
-                                                //                                                        }
-                                                //                                                    }
-                                                //                                                    ;
-                                                //                                                    b = a[0];
-                                                //                                                    b.shift();
-                                                //                                                    chartViewModel.chart = ChartPOJO.reset_Axis(chartViewModel.chart, 'x', b);
-                                                //                                                    var c = [];
-                                                //                                                    a.shift();
-                                                //                                                    a.forEach(function (item) {
-                                                //                                                        c.push({'name': item.shift(), 'data': item})
-                                                //                                                    });
-                                                //                                                    chartViewModel.chart = Descartes_ChartPOJO.reset_series_data(chartViewModel.chart, c, 'bar');
-                                                //
-                                                ////                                                    b = a[0];
-                                                ////                                                    chartViewModel.chart = ChartPOJO.generate_default_chart('main_chart');
-                                                ////                                                    chartViewModel.chart = Parallel_ChartPOJO.initialize_chart(chartViewModel.chart, b);
-                                                ////                                                    a.shift();
-                                                ////                                                    chartViewModel.chart = ChartPOJO.addSeries(chartViewModel.chart, 'default', 'parallel', a);
-                                                //
-
-                                                //                                                }
     </script>
 
 </body>
