--- a/generic_datasource_client/src/main/webapp/business_gallery.html
+++ b/generic_datasource_client/src/main/webapp/business_gallery.html
@@ -103,7 +103,7 @@
                         <div data-bind="with:businessPOJO().elements">
                             <!--ko foreach: viewData-->
                             <div class="col-xs-12" style="margin-bottom:18px;">
-                                <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){show_data($data)}}">
+                                <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){show_data($data,'check')}}">
                                     <div class="card-body">
                                         <i class="icon fa fa-bars fa-4x"></i>
                                         <div class="content">
@@ -112,8 +112,10 @@
                                                 <span class="label label-warning" id="DatabaseData"data-bind="if:type !='GENERIC_MATRIX_DATA_SOURCE'" style="margin-right: 8px;">Database</span>
                                                 <span  data-bind="text:creator" style="margin-right: 8px;"></span>
                                                 <span  data-bind="text:(function(){return new Date(parseInt(numberalpha)).toLocaleString()})()" style="margin-right: 8px;"></span>
-                                                <button title="Remove" data-bind="click:function(){console.log($data);ModalUtil.popup_modal_with_businessPOJO('DELETE', '/modal_content_remove.html', $data, null,null);}" type="button" class="btn btn-default pull-right" style="padding: 6px 8px;margin-bottom: 0px;margin-right: 8px;"><i class="fa fa-trash-o"></i></button>
-                                                <button title="Update" data-bind="event:{click:function(){Update($data)}}" type="button" class="btn btn-default pull-right" style="padding: 6px 8px;margin-bottom: 0px;margin-right: 8px;"><i class="fa fa-cogs"></i></button>
+                                                <button title="Remove" data-bind="click:function(){ModalUtil.popup_modal_with_businessPOJO('DELETE', '/modal_content_remove.html', $data, null,null);}" type="button" class="btn btn-default pull-right" style="padding: 6px 8px;margin-bottom: 0px;margin-right: 8px;">
+                                                    <i class="fa fa-trash-o"></i>
+                                                </button>
+                                                <button title="Update" data-bind="event:{click:function(){show_data($data,'update')}}" type="button" class="btn btn-default pull-right" style="padding: 6px 8px;margin-bottom: 0px;margin-right: 8px;"><i class="fa fa-cogs"></i></button>
                                             </div>
 
                                             <div class="value">
