--- a/generic_chart_client/src/main/webapp/module_gallery_saved_self.html
+++ b/generic_chart_client/src/main/webapp/module_gallery_saved_self.html
@@ -173,7 +173,7 @@
                                                 setTimeout(function () {
                                                     resetCssClass('li_gallery', 'active');
                                                     $('#navbar_search_li').css('display', '');
-                                                    $('#navbar_title_li').html('Self Saved Gallery');
+                                                    $('#navbar_title_li').html('Chart Gallery');
                                                     SearchPOJO.listener = search_saved_self;
                                                     ScrollPOJO.listener = retrieveData_saved_self;
                                                     ScrollPOJO.listener();
